nouvelle BDD remplie par un script

--- a/app/templates/pages/corpus.html
+++ b/app/templates/pages/corpus.html
@@ -21,9 +21,9 @@
                     {% for acte in document %}
                         <tbody>
                             <tr>
-                                <td><a href="{{url_for('acte', acte_id=acte.id_acte)}}">{{acte.id_acte}}</a></td>
-                                <td>{{acte.date_temps}}</td>
-                                <td><a href="{{url_for('acte', acte_id=acte.id_acte)}}">{{acte.regeste}}.</a>
+                                <td><a href="{{url_for('acte', acte_id=acte.id_acts)}}">{{acte.id_acts}}</a></td>
+                                <td>{{acte.date}}</td>
+                                <td><a href="{{url_for('acte', acte_id=acte.id_acts)}}">{{acte.analyse}}.</a>
                                 </td>
                             </tr>
                         </tbody>
