--- a/app/templates/pages/resultats.html
+++ b/app/templates/pages/resultats.html
@@ -6,54 +6,54 @@
         {% if resultats %}
             {% for acte in resultats %}
                 <div class="result-item">
-                    <a href="{{url_for('acte', acte_id=acte.id_acte)}}">
-                        <p class="result-item-acte">Acte n°{{acte.id_acte}} ({{acte.date_temps}}) : {{acte.etatActe}}, {{acte.typeActe}}, {{acte.lieu_conservation}}.</p>
-                        <p style="margin-left: 2.5%; margin-top: 0.25%;"><i>{{acte.regeste}}.</i></p>
+                    <a href="{{url_for('acte', acte_id=acte.id_acts)}}">
+                        <p class="result-item-acte">Acte n°{{acte.id_acts}} ({{acte.date}}) : {{acte.state}}, {{acte.type}}, {{acte.institution}}.</p>
+                        <p style="margin-left: 2.5%; margin-top: 0.25%;"><i>{{acte.analyse}}.</i></p>
                     </a>
                 </div>
             {% endfor %}
-        {% elif resultats_lieu_conservation %}
-            {% for depot in resultats_lieu_conservation %}
+        {% elif resultats_institution %}
+            {% for depot in resultats_institution %}
                 <div class="result-item">
-                    <a href="{{url_for('acte', acte_id=depot.id_acte)}}">
-                        <p class="result-item-acte">Acte n°{{depot.id_acte}} ({{depot.date_temps}}) : {{depot.etatActe}}, {{depot.typeActe}}, {{depot.lieu_conservation}}.</p>
-                        <p style="margin-left: 2.5%; margin-top: 0.25%;"><i>{{depot.regeste}}.</i></p>
+                    <a href="{{url_for('acte', acte_id=depot.id_acts)}}">
+                        <p class="result-item-acte">Acte n°{{depot.id_acts}} ({{depot.date}}) : {{depot.state}}, {{depot.type}}, {{depot.institution}}.</p>
+                        <p style="margin-left: 2.5%; margin-top: 0.25%;"><i>{{depot.analyse}}.</i></p>
                     </a>
                 </div>
             {% endfor %}
-        {% elif resultats_annee %}
+        <!--{% elif resultats_annee %}
             {% for annee in resultats_annee %}
                 <div class="result-item">
-                    <a href="{{url_for('acte', acte_id=annee.id_acte)}}">
-                        <p class="result-item-acte">Acte n°{{annee.id_acte}} ({{annee.date_temps}}) : {{annee.etatActe}}, {{annee.typeActe}}, {{annee.lieu_conservation}}.</p>
-                        <p style="margin-left: 2.5%; margin-top: 0.25%;"><i>{{annee.regeste}}.</i></p>
+                    <a href="{{url_for('acte', acte_id=annee.id_acts)}}">
+                        <p class="result-item-acte">Acte n°{{annee.id_acts}} ({{annee.date}}) : {{annee.state}}, {{annee.type}}, {{annee.institution}}.</p>
+                        <p style="margin-left: 2.5%; margin-top: 0.25%;"><i>{{annee.analyse}}.</i></p>
                     </a>
                 </div>
-            {% endfor %}
+            {% endfor %}-->
         {% elif resultats_lieu_production %}
             {% for lieu in resultats_lieu_production %}
                 <div class="result-item">
-                    <a href="{{url_for('acte', acte_id=lieu.id_acte)}}">
-                        <p class="result-item-acte">Acte n°{{lieu.id_acte}} ({{lieu.date_temps}}) : {{lieu.etatActe}}, {{lieu.typeActe}}, {{lieu.lieu_conservation}}.</p>
-                        <p style="margin-left: 2.5%; margin-top: 0.25%;"><i>{{lieu.regeste}}.</i></p>
+                    <a href="{{url_for('acte', acte_id=lieu.id_acts)}}">
+                        <p class="result-item-acte">Acte n°{{lieu.id_acts}} ({{lieu.date}}) : {{lieu.state}}, {{lieu.type}}, {{lieu.institution}}.</p>
+                        <p style="margin-left: 2.5%; margin-top: 0.25%;"><i>{{lieu.analyse}}.</i></p>
                     </a>
                 </div>
             {% endfor %}
         {% elif resultats_state %}
             {% for etat in resultats_state %}
                 <div class="result-item">
-                    <a href="{{url_for('acte', acte_id=etat.id_acte)}}">
-                        <p class="result-item-acte">Acte n°{{etat.id_acte}} ({{etat.date_temps}}) : {{etat.etatActe}}, {{etat.typeActe}}, {{etat.lieu_conservation}}.</p>
-                        <p style="margin-left: 2.5%; margin-top: 0.25%;"><i>{{etat.regeste}}.</i></p>
+                    <a href="{{url_for('acte', acte_id=etat.id_acts)}}">
+                        <p class="result-item-acte">Acte n°{{etat.id_acts}} ({{etat.date}}) : {{etat.state}}, {{etat.type}}, {{etat.institution}}.</p>
+                        <p style="margin-left: 2.5%; margin-top: 0.25%;"><i>{{etat.analyse}}.</i></p>
                     </a>
                 </div>
             {% endfor %}
         {% elif resultats_type %}
             {% for type in resultats_type %}
                 <div class="result-item">
-                    <a href="{{url_for('acte', acte_id=type.id_acte)}}">
-                        <p class="result-item-acte">Acte n°{{type.id_acte}} ({{type.date_temps}}) : {{type.etatActe}}, {{type.typeActe}}, {{type.lieu_conservation}}.</p>
-                        <p style="margin-left: 2.5%; margin-top: 0.25%;"><i>{{type.regeste}}.</i></p>
+                    <a href="{{url_for('acte', acte_id=type.id_acts)}}">
+                        <p class="result-item-acte">Acte n°{{type.id_acts}} ({{type.date}}) : {{type.state}}, {{type.type}}, {{type.institution}}.</p>
+                        <p style="margin-left: 2.5%; margin-top: 0.25%;"><i>{{type.analyse}}.</i></p>
                     </a>
                 </div>
             {% endfor %}
