--- a/app/static/css/css.css
+++ b/app/static/css/css.css
@@ -216,13 +216,13 @@ a:hover, a:active {
     padding: 2%;
     width: 80%;
     margin: auto;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .text-footer {
     display: flex;
     flex-direction: column;
     width: 30%;
-    font-family: 'Open Sans', sans-serif;
     justify-content: center;
 }
 
@@ -234,7 +234,8 @@ a:hover, a:active {
 .credit-footer {
     font-size: x-small;
     text-align: justify;
-    margin-bottom: 0%;
+    margin-top: 0.5%;
+    margin-bottom: 2%;
 }
 
 .box-img-footer {
