--- a/app/templates/conteneur.html
+++ b/app/templates/conteneur.html
@@ -71,10 +71,15 @@
                 <div class="global-footer">
                     <div class="text-footer">
                         <p class="name-footer">© Jean-Damien Généro</p>
-                        <p class="credit-footer">Application développée en 2020 dans le cadre du <a href="http://www.chartes.psl.eu/fr/cursus/master-technologies-numeriques-appliquees-histoire">Master &#171; Technologies numériques appliquées à l'histoire &#187;</a> de l'École nationale des chartes, à partir d'un mémoire de Master recherche soutenu en 2018 à l'École d'histoire de la Sorbonne (Université Paris I).</p>
+                        <p class="credit-footer">Application développée en 2020 dans le cadre du <a href="http://www.chartes.psl.eu/fr/cursus/master-technologies-numeriques-appliquees-histoire">Master &#171; Technologies numériques appliquées à l'histoire &#187;</a> de l'École nationale des chartes, à partir d'un mémoire de Master recherche soutenu en 2018 à l'École d'histoire de la Sorbonne (Université Paris I).</p>
+                        <div>
+                            <a href="#"><img src="{{url_for('static', filename='img/linkedin.png')}}" alt="linkedin" width="5%" height="auto"></a>
+                            <a href="#"><img src="{{url_for('static', filename='img/github.png')}}" alt="github" width="5%" height="auto"></a>
+                            <a href="#" style="font-size: x-small;">Mentions légales</a>
+                        </div>
                     </div>
                     <div class="box-img-footer">
-                        <a href="http://www.chartes.psl.eu/fr"><img src="{{url_for('static', filename='img/logo_enc.png')}}" alt="Logo de l'École des chartes" class="img-footer"></a>
+                        <a href="#"><img src="{{url_for('static', filename='img/logo_enc.png')}}" alt="Logo de l'École des chartes" class="img-footer"></a>
                     </div>
                 </div>
             </div>
