--- a/app/static/css/css.css
+++ b/app/static/css/css.css
@@ -219,6 +219,11 @@ a:hover, a:active {
     font-family: 'Open Sans', sans-serif;
 }
 
+.name-icon-footer-global {
+    display: flex;
+    flex-direction: row;"
+}
+
 .text-footer {
     display: flex;
     flex-direction: column;
@@ -227,15 +232,21 @@ a:hover, a:active {
 }
 
 .name-footer {
-    margin-bottom: 0.5%;
     font-size: small;
+    width: 70%;
+    height: auto;
+}
+
+.icon-footer {
+    width: 95%;
+    height: auto;
 }
 
 .credit-footer {
     font-size: x-small;
     text-align: justify;
     margin-top: 0.5%;
-    margin-bottom: 2%;
+    margin-bottom: 0.5%;
 }
 
 .box-img-footer {
