--- a/app/templates/pages/recherche.html
+++ b/app/templates/pages/recherche.html
@@ -27,7 +27,7 @@
                         </div>
                     </div>
                     <div class="form-button-global">
-                        <button type="submit" class="form-button">Selectionner</button>
+                        <button type="submit" class="form-button">Rechercher</button>
                     </div>
                 </div>
             </form>
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                     <div class="form-button-global">
-                        <button type="submit" class="form-button">Selectionner</button>
+                        <button type="submit" class="form-button">Rechercher</button>
                     </div>
                 </div>
             </form>
@@ -108,7 +108,7 @@
                         </div>
                     </div>
                     <div class="form-button-global">
-                        <button type="submit" class="form-button">Selectionner</button>
+                        <button type="submit" class="form-button">Rechercher</button>
                     </div>
                 </div>
             </form>
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                     <div class="form-button-global">
-                        <button type="submit" class="form-button">Selectionner</button>
+                        <button type="submit" class="form-button">Rechercher</button>
                     </div>
                 </div>
             </form>
@@ -135,14 +135,15 @@
                     <div class="form-keyword-global">
                         <div class="form-keyword-sub">
                             <select name="type" type="search"  class="form-keyword">
-                                {% for item in list_type %}
-                                    <option value="{{item}}">{{item}}</option>
-                                {% endfor %}
+                                    <option value="charte">Charte</option>
+                                    <option value="patentes">Lettres patentes</option>
+                                    <option value="closes">Lettres closes</option>
+                                    <option value="mandement">Mandement</option>
                             </select>
                         </div>
                     </div>
                     <div class="form-button-global">
-                        <button type="submit" class="form-button">Selectionner</button>
+                        <button type="submit" class="form-button">Rechercher</button>
                     </div>
                 </div>
             </form>
