--- a/app/templates/conteneur.html
+++ b/app/templates/conteneur.html
@@ -86,7 +86,7 @@
                                 </a>
                             </div>
                         </div>
-                        <p class="credit-footer">Application développée en 2020 dans le cadre du <a href="http://www.chartes.psl.eu/fr/cursus/master-technologies-numeriques-appliquees-histoire" target="_blank">Master &#171; Technologies numériques appliquées à l'histoire &#187;</a> de l'École nationale des chartes, à partir d'un mémoire de Master recherche soutenu en 2018 à l'École d'histoire de la Sorbonne (Université Paris I). <a href="#">Lire les mentions légales.</a></p>
+                        <p class="credit-footer">Application développée en 2020 dans le cadre du <a href="http://www.chartes.psl.eu/fr/cursus/master-technologies-numeriques-appliquees-histoire" target="_blank">Master &#171; Technologies numériques appliquées à l'histoire &#187;</a> de l'École nationale des chartes, à partir d'un mémoire de Master recherche soutenu en 2018 à l'École d'histoire de la Sorbonne (Université Paris I). <a href="{{url_for('mentions_legales')}}">Lire les mentions légales.</a></p>
                     </div>
                     <div class="box-img-footer">
                         <a href="http://www.chartes.psl.eu/" target="_blank"><img src="{{url_for('static', filename='img/logo_enc.png')}}" alt="Logo de l'École des chartes" class="img-footer"></a>
