--- a/app/static/css/css.css
+++ b/app/static/css/css.css
@@ -399,7 +399,7 @@ a:hover, a:active {
 
 .date {
     text-align: center;
-    font-size: 18px;
+    font-size: 20px;
     margin-top: 40px;
     margin-bottom: 20px;
 }
@@ -407,9 +407,15 @@ a:hover, a:active {
 .analyse {
     text-align: justify;
     font-style: italic;
+    margin-top: 4%;
+    margin-bottom: 4%;
+    font-size: 18px;
+}
+
+.analyse > p {
     text-indent: 5%;
-    margin-top: 40px;
-    margin-bottom: 20px;
+    margin-top: 1%;
+    margin-bottom: 1%;
 }
 
 .tradition {
@@ -417,6 +423,7 @@ a:hover, a:active {
     text-align: justify;
     margin-top: 10px;
     margin-bottom: 20px;
+    font-size: 14px;
 }
 
 .tradition > p {
@@ -426,32 +433,36 @@ a:hover, a:active {
 .act {
     text-align: justify;
     text-indent: 5%;
-    margin-top: 2%;
+    margin-top: 4%;
     margin-bottom: 2.5%;
+    font-size: 18px;
 }
 
 .text_etabli {
     text-align: center;
     font-variant: small-caps;
-    font-size: 14pt;
-    margin-bottom: 4%;
+    font-size: 18pt;
+    margin-top: 4%;
+    margin-bottom: 1%;
 }
 
 .mht {
     text-indent: 5%;
+    font-size: 14pt;
 }
 
 .signature {
     text-indent: 5%;
+    font-size: 14pt;
 }
 
 .note-global {
     margin-top: 3%;
     margin-bottom: 3%;
+    font-size: 11pt;
 }
 
 .note-global > p {
-    font-size: smaller;
     margin: 0.25%;
 }
 
