--- a/app/templates/pages/bibliographie.html
+++ b/app/templates/pages/bibliographie.html
@@ -24,42 +24,37 @@
 					<p>Valentine Martin, <i>La chancellerie bourbonnaise à la fin du XIII<sup>e</sup> siècle et sous les principats de Louis I<sup>er</sup> et Pierre I<sup>er</sup> de Bourbon (ca. 1270-1356), suivi d’un recueil des actes de la chancellerie</i>, mémoire de Master recherche sous la direction d'Olivier Mattéoni, École d'histoire de la Sorbone (Paris I), 2019.</p>
 					<p>Jean-Damien Généro, <i>La chancellerie de Charles I<sup>er</sup> de Bourbon (1425-1456), avec l'édition de ses actes et de ceux de son épouse, Agnès de Bourgogne</i>, mémoire de Master recherche sous la direction d'Olivier Mattéoni, École d'histoire de la Sorbone (Paris I), 2018.</p>
 					<h3 class="h3_global">Articles scientifiques</h3>
-					<p>Olivier Mattéoni, « Écrire et signer à la chancellerie d'un contemporain de Jean de Berry, Louis II de Bourbon (1356-1410) », dans <i>Jean de Berry et l'écrit. Les pratiques documentaires d'un fils de roi de France</i>, Olivier Guyotjeannin, Olivier Mattéoni (dir.), Paris, École nationale des chartes et Éditions de la Sorbonne, 2019, p.&nbsp;159-185.</p>
-					<p>Jean-Damien Généro et Olivier Mattéoni, « Les  actes  d’Anne  Dauphine :  étude  diplomatique », dans <i>Anne  Dauphine,  dernière  comtesse  de  Forez</i>, O.  Mattéoni  (dir.), Montbrison  La  Diana, Société historique et archéologique du Forez, 2019, p.&nbsp;35-52.</p>
-					<p>Olivier Mattéoni, « Écriture  etpouvoir  princier.  La  chancellerie  du  duc  Louis  II  de  Bourbon  (1356-1410) »,  dans  G.  Castelnuovo  et  O.Mattéoni  (dir.), <i>« De  part  et  d’autre  des  Alpes » (II).  Chancelleries et chanceliers des princes à la fin du Moyen Âge</i>, Chambéry, 2011, p.&nbsp;137-178.</p>
+					<p>Olivier&nbsp;Mattéoni, « Écrire et signer à la chancellerie d'un contemporain de Jean de Berry, Louis II de Bourbon (1356-1410) », dans <i>Jean de Berry et l'écrit. Les pratiques documentaires d'un fils de roi de France</i>, Olivier&nbsp;Guyotjeannin, Olivier&nbsp;Mattéoni (dir.), Paris, École nationale des chartes et Éditions de la Sorbonne, 2019, p.&nbsp;159-185 <a href="https://books.openedition.org/psorbonne/54218">[lire en ligne]</a>.</p>
+					<p>Jean-Damien&nbsp;Généro et Olivier&nbsp;Mattéoni, « Les  actes  d’Anne  Dauphine :  étude  diplomatique », dans <i>Anne  Dauphine,  dernière  comtesse  de  Forez</i>, O.  Mattéoni  (dir.), Montbrison  La  Diana, Société historique et archéologique du Forez, 2019, p.&nbsp;35-52.</p>
+					<p>Olivier Mattéoni, « Écriture  etpouvoir  princier.  La  chancellerie  du  duc  Louis  II  de  Bourbon  (1356-1410) »,  dans  Guido&nbsp;Castelnuovo  et  Olivier&nbsp;Mattéoni  (dir.), <i>« De  part  et  d’autre  des  Alpes » (II).  Chancelleries et chanceliers des princes à la fin du Moyen Âge</i>, Chambéry, 2011, p.&nbsp;137-178.</p>
 					<h3 class="h3_global">Inventaire</h3>
-					<p><i>Titres de l’ancienne maison ducale de Bourbon</i>, 2 vol., Alphonse Huillard-Bréholles, Albert Lecoy de La Marche (éd.), Paris, 1867-1874 (abrégé en <i>Titres de Bourbon</i>).</p>	
+					<p><i>Titres de l’ancienne maison ducale de Bourbon</i>, 2 vol., Alphonse Huillard-Bréholles, Albert Lecoy de La Marche (éd.), Paris, 1867-1874 <a href="https://archive.org/details/bub_gb_POUbAQAAMAAJ">[lire en ligne]</a> (abrégé en <i>Titres de Bourbon</i>).</p>	
 				</div>
 			</div>
 		</div>
-		<div>
+		<div class="projet-desc-text">
 			<div class="h2_global">
 				<h2>Autres corpus</h2>
 			</div>
-			<div>
+			<div class="biblio-text">
 				<h3 class="h3_global">Actes de Jean de Berry</h3>
-				<div class="biblio-text biblio-text-autre">
-					<p><i>Jean de Berry et l'écrit. Les pratiques documentaires d'un fils de roi de France</i>, sous la direction d'Olivier Guyotjeannin et d'Olivier Mattéoni, Paris, École nationale des chartes et Éditions de la Sorbonne, 2019.</p>
-					<p><a href="http://www.archives18.fr/article.php?larub=604">Les actes de Jean de Berry dans le fonds de la Sainte-Chapelle de Bourges, sur le site des Archives départementales du Cher.</a></p>
-				</div>	
+				<p><i>Jean de Berry et l'écrit. Les pratiques documentaires d'un fils de roi de France</i>, sous la direction d'Olivier&nbsp;Guyotjeannin et d'Olivier&nbsp;Mattéoni, Paris, École nationale des chartes et Éditions de la Sorbonne, 2019 <a href="https://books.openedition.org/psorbonne/54103">[lire en ligne]</a>.</p>
+				<p><a href="http://www.archives18.fr/article.php?larub=604">Les actes de Jean de Berry dans le fonds de la Sainte-Chapelle de Bourges, sur le site des Archives départementales du Cher.</a></p>
 			</div>
-			<div>
+			<div class="biblio-text">
 				<h3 class="h3_global">Actes des ducs de Bourgogne</h3>
-				<div class="biblio-text biblio-text-autre">
-					<p><i>Ordonnances de Philippe le Hardi, Marguerite de Flandre et de Jean sans Peur, 1381-1419</i>, 2 vol., Paul Bonenfant, John Bartier, Andrée Van Nieuwenhuysen (éd.), Bruxelles, Commission royale pour la publication des anciennes lois et ordonnances de Belgique, 1965-1974.</p>
-					<p><i>Ordonnances de Jean sans Peur, 1405-1419</i>, Jean-Marie Cauchies (éd.), Bruxelles, Commission royale pour la publication des anciennes lois et ordonnances de Belgique, 2001.</p>
-					<p>Henri Stein, <i>Catalogue des actes de Charles le Téméraire (1467-1477)</i>, suivi de <i>Urkunden und Mandate Karls von Burgund, Grafen von Charolais (1433-1467)</i>, Sonja Dünnebeil (éd.), Sigmaringen, Jan Thorbecke, 1999.</p>
-					<p><i>La correspondance d’Isabelle de Portugal, duchesse de Bourgogne (1430-1471)</i>, Monique Sommé (éd.), Ostfildern, Jan Thorbecke, 2009.</p>	
-				</div>	
+				<p><i>Ordonnances de Philippe le Hardi, Marguerite de Flandre et de Jean sans Peur, 1381-1419</i>, 2 vol., Paul Bonenfant, John Bartier, Andrée Van Nieuwenhuysen (éd.), Bruxelles, Commission royale pour la publication des anciennes lois et ordonnances de Belgique, 1965-1974.</p>
+				<p><i>Ordonnances de Jean sans Peur, 1405-1419</i>, Jean-Marie Cauchies (éd.), Bruxelles, Commission royale pour la publication des anciennes lois et ordonnances de Belgique, 2001.</p>
+				<p>Henri Stein, <i>Catalogue des actes de Charles le Téméraire (1467-1477)</i>, suivi de <i>Urkunden und Mandate Karls von Burgund, Grafen von Charolais (1433-1467)</i>, Sonja Dünnebeil (éd.), Sigmaringen, Jan Thorbecke, 1999.</p>
+				<p><i>La correspondance d’Isabelle de Portugal, duchesse de Bourgogne (1430-1471)</i>, Monique Sommé (éd.), Ostfildern, Jan Thorbecke, 2009.</p>
 			</div>
+			<div class="biblio-text">
 				<h3 class="h3_global">Actes des ducs de Bretagne</h3>
-				<div class="biblio-text biblio-text-autre">
-					<p><i>Actes de Pierre de Dreux, duc de Bretagne (1213-1237)</i>, Marjolaine Lémeillat (éd.), Rennes, PUR, 2013.</p>
-					<p><i>Actes de Jean I<sup>er</sup>, duc de Bretagne (1237-1286)</i>, Lémeillat M. (éd.), Rennes, PUR, 2014.</p>
-					<p>Michael Jones, <i>Recueil des actes de Charles de Blois et Jeanne de Penthièvre</i>, Rennes, PUR, 2016. </p>
-					<p>Michael Jones, <i>Recueil des actes de Jean IV, duc de Bretagne</i>, 2 vol., Paris, Klincksieck, 1980 et 1983.</p>
-					<p><i>Lettres et mandements de Jean V, duc de Bretagne</i>, 5 vol., René Blanchard (éd.) Nantes, Société des bibliophiles bretons et de l’histoire de Bretagne, 1889-1895.</p>
-				</div>	
+				<p><i>Actes de Pierre de Dreux, duc de Bretagne (1213-1237)</i>, Marjolaine Lémeillat (éd.), Rennes, PUR, 2013.</p>
+				<p><i>Actes de Jean I<sup>er</sup>, duc de Bretagne (1237-1286)</i>, Lémeillat M. (éd.), Rennes, PUR, 2014.</p>
+				<p>Michael Jones, <i>Recueil des actes de Charles de Blois et Jeanne de Penthièvre</i>, Rennes, PUR, 2016. </p>
+				<p>Michael Jones, <i>Recueil des actes de Jean IV, duc de Bretagne</i>, 2 vol., Paris, Klincksieck, 1980 et 1983.</p>
+				<p><i>Lettres et mandements de Jean V, duc de Bretagne</i>, 5 vol., René Blanchard (éd.) Nantes, Société des bibliophiles bretons et de l’histoire de Bretagne, 1889-1895.</p>
 			</div>
 	</div>
 </div>
