--- a/app/static/css/css.css
+++ b/app/static/css/css.css
@@ -363,13 +363,11 @@ a:hover, a:active {
 
 
 /* ACTES */
-.acte_global {
+.acte-global {
     display: flex;
     flex-direction: column;
     width: 80%;
     flex-wrap: wrap;
-    padding-right: 21%;
-    padding-left: 21%;
     width: auto;
     margin: auto;
     margin-bottom: 2%;
@@ -379,15 +377,8 @@ a:hover, a:active {
 .prec_suiv {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-}
-
-.prec {
-    padding-right: 8%;
-}
-
-.suiv {
-    padding-left: 8%;
+    flex-wrap: wrap;
+    margin : auto;
 }
 
 .numero {
@@ -400,22 +391,20 @@ a:hover, a:active {
 .date {
     text-align: center;
     font-size: 20px;
-    margin-top: 40px;
-    margin-bottom: 20px;
+    margin-top: 4%;
+    margin-bottom: 3%;
 }
 
 .analyse {
     text-align: justify;
     font-style: italic;
-    margin-top: 4%;
-    margin-bottom: 4%;
     font-size: 18px;
 }
 
 .analyse > p {
     text-indent: 5%;
-    margin-top: 1%;
-    margin-bottom: 1%;
+    margin-top: 1.5%;
+    margin-bottom: 1.5%;
 }
 
 .tradition {
@@ -433,8 +422,8 @@ a:hover, a:active {
 .act {
     text-align: justify;
     text-indent: 5%;
-    margin-top: 4%;
-    margin-bottom: 2.5%;
+    margin-top: 2%;
+    margin-bottom: 0.5%;
     font-size: 18px;
 }
 
@@ -442,22 +431,29 @@ a:hover, a:active {
     text-align: center;
     font-variant: small-caps;
     font-size: 18pt;
-    margin-top: 4%;
-    margin-bottom: 1%;
 }
 
 .mht {
     text-indent: 5%;
     font-size: 14pt;
+    margin-top: 0.5%;
+    margin-bottom: 0.5%;
 }
 
 .signature {
     text-indent: 5%;
     font-size: 14pt;
+    margin-top: 0.5%;
+    margin-bottom: 0.5%
+}
+
+.signature > p {
+    margin-top: 0%;
+    margin-bottom: 0.5%
 }
 
 .note-global {
-    margin-top: 3%;
+    margin-top: 1%;
     margin-bottom: 3%;
     font-size: 11pt;
 }
