ajout @href='mailto...'

--- a/app/templates/pages/contact.html
+++ b/app/templates/pages/contact.html
@@ -2,7 +2,7 @@
 {% block corps %}
 <div class="contact-global">
     <h1>Contact</h1>
-    <p>Ce site est un projet développé dans le cadre d'un enseignement. Si vous avez des remarques ou désirez des informations complémentaires à son sujet, vous pouvez écrire à : <mark style="color: blue;background-color: inherit;">jean-damien.genero [at] chartes [.] psl [.] eu</mark></p>
+    <p>Ce site est un projet développé dans le cadre d'un enseignement. Si vous avez des remarques ou désirez des informations complémentaires à son sujet : <a href="mailto:jean-damien.genero@chartes.psl.eu?subject=Message%20au%20sujet%20du%20site%20%22Actes%20de%20Charles%20Ier%22&body=%C3%89crivez%20votre%20message%20ici.">cliquez ici pour envoyer un message</a>.</p>
 </div>
 
 {% endblock %}
