mention des images #6

--- a/app/templates/pages/corpus.html
+++ b/app/templates/pages/corpus.html
@@ -5,10 +5,10 @@
         <div>
             <h2 class="h2_global">Présentation du corpus</h2>
             <p>Le corpus des actes de Charles I<sup>er</sup> de Bourbon et d'Agnès de Bourgogne se compose de 405 documents, dont 373 sont passés au nom du duc et 32 au nom de la duchesse ; parmi ceux-ci, le couple ducal passe six actes en commun.</p>
-            <p>Seul un échantillon du corpus a été mis en ligne. À ce jour, <b>{{document|length}} actes sont enregistrés</b>.</p>
+            <p>Seul un échantillon du corpus a été mis en ligne (<b>{{document|length}} actes à ce jour</b>). Les images de plusieurs actes originaux et de deux <i>deperdita</i> sont également disponibles. À l'exception de celle de l'<a href="{{url_for('acte', acte_id=9)}}">acte n° 9</a>, il ne s'agit pas de prises de vue professionnelles.</p>
         </div>
         <div>
-            <h2 class="h2_global">Liste des actes</h2>
+            <h2 class="h2_global">Liste des {{document|length}} actes disponibles</h2>
             <div>
                 <table>
                 <thead>
